--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,7 +10,7 @@ input[type="text"] {
   margin-left: 10px;
 }
 .loader {
-  display: none;
+  display: block;
   margin-left: 5px;
   font-size: 10px;
   float: left;
@@ -18,11 +18,6 @@ input[type="text"] {
   border-right: 1.1em solid rgba(147, 147, 147, 0.2);
   border-bottom: 1.1em solid rgba(147, 147, 147, 0.2);
   border-left: 1.1em solid #676767;
-  -webkit-transform: translateZ(0);
-  -ms-transform: translateZ(0);
-  transform: translateZ(0);
-  -webkit-animation: load8 1.1s infinite linear;
-  animation: load8 1.1s infinite linear;
 }
 .loader,
 .loader:after {
